add permission for step function to invoke db lambda

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -97,6 +97,9 @@ Resources:
                   - events:PutRule
                   - events:DescribeRule
                 Resource: !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/StepFunctionsGetEventsForBatchJobsRule"
+              - Effect: Allow
+                Action: lambda:InvokeFunction
+                Resource: !GetAtt Lambda.Arn
 
   LambdaLogGroup:
     Type: AWS::Logs::LogGroup
