set resultpath for JOB_RUNNING task

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -33,6 +33,7 @@ Resources:
                 "job_id.$": "$$.Execution.Name",
                 "job_status": "RUNNING"
               },
+              "ResultPath": null,
               "Next": "RTC_GAMMA"
             },
             "RTC_GAMMA": {
