--- a/api/tests/cfg.env
+++ b/api/tests/cfg.env
@@ -1,3 +1,4 @@
 STEP_FUNCTION_ARN=arn:aws:states:us-west-2:1234:stateMachine:hyp3-step-function
+TABLE_NAME=hyp3-db-table
 AUTH_PUBLIC_KEY=123456789
 AUTH_ALGORITHM=HS256
