--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -158,6 +158,9 @@ Resources:
                 Action: states:StartExecution
                 Resource:
                   - !Ref StepFunctionArn
+              - Effect: Allow
+                Action: dynamodb:Query
+                Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
 
   Lambda:
     Type: AWS::Lambda::Function
