added enviroment variables to cf

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -22,6 +22,14 @@ Parameters:
     Type: String
     Default: RS256
 
+  AuthGroupName:
+    Type: String
+    Default: HAS_ACCESS_TO_HYP3
+
+  AuthAppUid:
+    Type: String
+    Default: asf-urs
+
   DomainName:
     Type: String
 
@@ -43,6 +51,8 @@ Resources:
         JobsTable: !Ref JobsTable
         AuthPublicKey: !Ref AuthPublicKey
         AuthAlgorithm: !Ref AuthAlgorithm
+        AuthGroupName: !Ref AuthGroupName
+        AuthAppUid: !Ref AuthAppUid
         DomainName: !Ref DomainName
         CertificateArn: !Ref CertificateArn
       TemplateURL: api/cloudformation.yml
