--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -13,6 +13,14 @@ Parameters:
     Type: String
     Default: RS256
 
+  AuthGroupName:
+    Type: String
+    Default: HAS_ACCESS_TO_HYP3
+
+  AuthAppUid:
+    Type: String
+    Default: asf-urs
+
   DomainName:
     Type: String
 
@@ -171,6 +179,8 @@ Resources:
           TABLE_NAME: !Ref JobsTable
           AUTH_PUBLIC_KEY: !Ref AuthPublicKey
           AUTH_ALGORITHM: !Ref AuthAlgorithm
+          AUTH_GROUP_NAME: !Ref AuthGroupName
+          AUTH_APP_UID: !Ref AuthAppUid
       Code: src/
       Handler: lambda_handler.handler
       MemorySize: 128
