--- a/api/tests/cfg.env
+++ b/api/tests/cfg.env
@@ -3,7 +3,7 @@ TABLE_NAME=hyp3-db-table
 AUTH_PUBLIC_KEY=123456789
 AUTH_ALGORITHM=HS256
 AUTH_GROUP_NAME=auth-group
-AUTH_APP_UID-auth-uid
+AUTH_APP_UID=auth-uid
 AWS_ACCESS_KEY_ID=testing
 AWS_SECRET_ACCESS_KEY=testing
 AWS_SECURITY_TOKEN=testing
