--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -24,21 +24,12 @@ Resources:
       RoleArn: !GetAtt StepFunctionRole.Arn
       DefinitionString: !Sub |-
         {
-          "StartAt": "ADD_JOB_ID_TO_INPUT",
-          "States": {
-            "ADD_JOB_ID_TO_INPUT": {
-              "Type": "Pass",
-              "Parameters": {
-                "job_id.$": "$$.Execution.Name"
-              },
-              "ResultPath": "$.context",
-              "Next": "JOB_RUNNING"
-            },
+          "StartAt": "JOB_RUNNING",
             "JOB_RUNNING": {
               "Type": "Task",
               "Resource": "${Lambda.Arn}",
               "Parameters": {
-                "job_id.$": "$.context.job_id",
+                "job_id.$": "$.job_id",
                 "job_type.$": "$.job_type",
                 "user_id.$": "$.user_id",
                 "status_code": "RUNNING",
@@ -51,7 +42,7 @@ Resources:
             },
             "ADD_PREFIX_TO_JOB_PARAMETERS": {
               "Type": "Pass",
-              "InputPath": "$.context.job_id"
+              "InputPath": "$.job_id"
               "ResultPath": "$.job_parameters.bucket-prefix",
               "Next": "RTC_GAMMA"
             },
@@ -60,7 +51,7 @@ Resources:
               "Resource": "arn:aws:states:::batch:submitJob.sync",
               "Parameters": {
                 "JobDefinition": "${RtcGammaJobDefinition}",
-                "JobName.$": "$.context.job_id",
+                "JobName.$": "$.job_id",
                 "JobQueue": "${JobQueueArn}",
                 "Parameters.$": "$.job_parameters"
               },
@@ -74,7 +65,7 @@ Resources:
               "Type": "Task",
               "Resource": "${Lambda.Arn}",
               "Parameters": {
-                "job_id.$": "$.context.job_id",
+                "job_id.$": "$.job_id",
                 "status_code": "SUCCEEDED"
               },
               "End": true
@@ -83,7 +74,7 @@ Resources:
               "Type": "Task",
               "Resource": "${Lambda.Arn}",
               "Parameters": {
-                "job_id.$": "$.context.job_id",
+                "job_id.$": "$.job_id",
                 "status_code": "FAILED"
               },
               "End": true
