fix step function definition

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -25,6 +25,7 @@ Resources:
       DefinitionString: !Sub |-
         {
           "StartAt": "JOB_RUNNING",
+          "States": {
             "JOB_RUNNING": {
               "Type": "Task",
               "Resource": "${Lambda.Arn}",
