fix typo in step function definition

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -51,7 +51,7 @@ Resources:
             },
             "ADD_PREFIX_TO_JOB_PARAMETERS": {
               "Type": "Pass",
-              "InputPath": "$.context.job_id"
+              "InputPath": "$.context.job_id",
               "ResultPath": "$.job_parameters.bucket-prefix",
               "Next": "RTC_GAMMA"
             },
