support 'should be a URI' statelint errors

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -61,4 +61,7 @@ jobs:
         with:
           ruby-version: 2.6
       - run: gem install statelint
-      - run: statelint step-function/step-function.json
+      - run: |
+          # replace ${LambdaArn} placeholder to suppress "Resource is "${LambdaArn}" but should be A URI" errors
+          sed -i "s/${LambdaArn}/arn:aws:lambda:us-west-2:111122223333:function:foo/" step-function/step-function.json
+          statelint step-function/step-function.json
