--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -161,6 +161,8 @@ Resources:
         Memory: 30000
         JobRoleArn: !GetAtt TaskRole.Arn
         Command:
+          - ++entrypoint
+          - hyp3_rtc_gamma_v2
           - --username
           - Ref::username
           - --password
