add fail task so failed batch jobs result in failed step function executions

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -103,7 +103,10 @@ Resources:
                 "status_code": "FAILED"
               },
               "ResultPath": "$.results.job_failed",
-              "End": true
+              "Next": "FAIL"
+            },
+            "FAIL": {
+              "Type": "Fail"
             }
           }
         }
