--- a/step-function/start-execution/cloudformation.yml
+++ b/step-function/start-execution/cloudformation.yml
@@ -42,7 +42,7 @@ Resources:
                   - logs:PutLogEvents
                 Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
               - Effect: Allow
-                Action: dynamodb:###
+                Action: dynamodb:Scan
                 Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
               - Effect: Allow
                   Action: states:StartExecution
