--- a/step-function/start-execution/cloudformation.yml
+++ b/step-function/start-execution/cloudformation.yml
@@ -54,10 +54,34 @@ Resources:
     Properties:
       Environment:
         Variables:
-          BUCKET: !Ref Bucket
+          TABLE_NAME: !Ref JobsTable
+          STEP_FUNCTION_ARN: !Ref StepFunctionArn
       Code: src/
       Handler: main.lambda_handler
       MemorySize: 128
       Role: !GetAtt Role.Arn
       Runtime: python3.8
       Timeout: 30
+
+  EventInvokeConfig:
+    Type: AWS::Lambda::EventInvokeConfig
+    Properties:
+      FunctionName: !Ref Lambda
+      Qualifier: $LATEST
+      MaximumRetryAttempts: 0
+
+  Schedule:
+    Type: AWS::Events::Rule
+    Properties:
+      ScheduleExpression: "rate(1 minute)"
+      Targets:
+        - Arn: !GetAtt Lambda.Arn
+          Id: lambda
+
+  EventPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !GetAtt Lambda.Arn
+      Action: lambda:InvokeFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt Schedule.Arn
