added states object back

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -23,6 +23,7 @@ Resources:
       DefinitionString: !Sub |-
         {
           "StartAt": "JOB_RUNNING",
+          "states": {
             "JOB_RUNNING": {
               "Type": "Task",
               "Resource": "${UpdateDB.Outputs.LambdaArn}",
