implement quota check for users who have submitted more then 100 jobs in a calendar month

--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -21,6 +21,9 @@ Parameters:
   CertificateArn:
     Type: String
 
+  MonthlyJobQuotaPerUser:
+    Type: Number
+
 Outputs:
 
   Url:
@@ -172,6 +175,7 @@ Resources:
           AUTH_ALGORITHM: !Ref AuthAlgorithm
           AUTH_GROUP_NAME: !Ref AuthGroupName
           AUTH_APP_UID: !Ref AuthAppUid
+          MONTHLY_JOB_QUOTA_PER_USER: !Ref MonthlyJobQuotaPerUser
       Code: src/
       Handler: lambda_handler.handler
       MemorySize: 128
