--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -140,6 +140,8 @@ Resources:
           AttributeType: S
         - AttributeName: status_code
           AttributeType: S
+        - AttributeName: request_time
+          AttributeType: N
       KeySchema:
         - AttributeName: job_id
           KeyType: HASH
@@ -148,6 +150,8 @@ Resources:
           KeySchema:
             - AttributeName: user_id
               KeyType: HASH
+            - AttributeName: request_time
+              KeyType: RANGE
           Projection:
             ProjectionType: ALL
         - IndexName: status_code
