install bump2version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt -t src
+          pip install bump2version
 
       - run: |
           aws cloudformation package \
